tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20010518_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20010518-1.c" (c, x86_64-unknown-linux-gnu)
fn add(%arg0: s32i, %arg1: s32i, %arg2: s32i, %arg3: s32i, %arg4: s32i, %arg5: s32i, %arg6: s32i, %arg7: s32i, %arg8: s32i, %arg9: s32i, %arg10: s32i, %arg11: s32i, %arg12: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i, %arg3: s32i, %arg4: s32i, %arg5: s32i, %arg6: s32i, %arg7: s32i, %arg8: s32i, %arg9: s32i, %arg10: s32i, %arg11: s32i, %arg12: s32i):
        %22 = alloca s32i, "a", align 4
        %23 = alloca s32i, "b", align 4
        %24 = alloca s32i, "c", align 4
        %25 = alloca s32i, "d", align 4
        %26 = alloca s32i, "e", align 4
        %27 = alloca s32i, "f", align 4
        %28 = alloca s32i, "g", align 4
        %29 = alloca s32i, "h", align 4
        %30 = alloca s32i, "i", align 4
        %31 = alloca s32i, "j", align 4
        %32 = alloca s32i, "k", align 4
        %33 = alloca s32i, "l", align 4
        %34 = alloca s32i, "m", align 4
        %35 = alloca s32i, "__retval", align 4
        store %arg0, %22
        store %arg1, %23
        store %arg2, %24
        store %arg3, %25
        store %arg4, %26
        store %arg5, %27
        store %arg6, %28
        store %arg7, %29
        store %arg8, %30
        store %arg9, %31
        store %arg10, %32
        store %arg11, %33
        store %arg12, %34
        %36 = load %22 : s32i, align 4
        %37 = load %23 : s32i, align 4
        %38 = add %36, %37 : s32i [nsw]
        %39 = load %24 : s32i, align 4
        %40 = add %38, %39 : s32i [nsw]
        %41 = load %25 : s32i, align 4
        %42 = add %40, %41 : s32i [nsw]
        %43 = load %26 : s32i, align 4
        %44 = add %42, %43 : s32i [nsw]
        %45 = load %27 : s32i, align 4
        %46 = add %44, %45 : s32i [nsw]
        %47 = load %28 : s32i, align 4
        %48 = add %46, %47 : s32i [nsw]
        %49 = load %29 : s32i, align 4
        %50 = add %48, %49 : s32i [nsw]
        %51 = load %30 : s32i, align 4
        %52 = add %50, %51 : s32i [nsw]
        %53 = load %31 : s32i, align 4
        %54 = add %52, %53 : s32i [nsw]
        %55 = load %32 : s32i, align 4
        %56 = add %54, %55 : s32i [nsw]
        %57 = load %33 : s32i, align 4
        %58 = add %56, %57 : s32i [nsw]
        %59 = load %34 : s32i, align 4
        %60 = add %58, %59 : s32i [nsw]
        store %60, %35
        %61 = load %35 : s32i
        return %61
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = const 1 : s32i
        %6 = const 2 : s32i
        %7 = const 3 : s32i
        %8 = const 4 : s32i
        %9 = const 5 : s32i
        %10 = const 6 : s32i
        %11 = const 7 : s32i
        %12 = const 8 : s32i
        %13 = const 9 : s32i
        %14 = const 10 : s32i
        %15 = const 11 : s32i
        %16 = const 12 : s32i
        %17 = const 13 : s32i
        %18 = call @add(%5, %6, %7, %8, %9, %10, %11, %12, %13, %14, %15, %16, %17) : s32i [all]
        %19 = const 91 : s32i
        %20 = cmp ne %18, %19 : bool
        if %20 {
            %21 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
