tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20010717_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20010717-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "i", align 4
    %2 = alloca s32i, "j", align 4
    %3 = alloca u64i, "u", align 8
    %4 = alloca u64i, "r1", align 8
    %5 = alloca u64i, "r2", align 8
    %6 = const 0 : s32i
    store %6, %0
    %7 = const -16 : s32i
    store %7, %1, align 4
    %8 = const 1 : s32i
    store %8, %2, align 4
    %9 = load %1 : s32i, align 4
    %10 = load %2 : s32i, align 4
    %11 = add %9, %10 : s32i [nsw]
    %12 = cast(integral) %11 : u64i
    store %12, %3, align 8
    %13 = load %3 : u64i, align 8
    %14 = const 1 : s32i
    %15 = shift right %13, %14 : u64i
    store %15, %4, align 8
    %16 = load %1 : s32i, align 4
    %17 = load %2 : s32i, align 4
    %18 = add %16, %17 : s32i [nsw]
    %19 = cast(integral) %18 : u64i
    %20 = const 1 : s32i
    %21 = shift right %19, %20 : u64i
    store %21, %5, align 8
    scope {
        %24 = load %4 : u64i, align 8
        %25 = load %5 : u64i, align 8
        %26 = cmp ne %24, %25 : bool
        if %26 {
            %27 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %22 = const 0 : s32i
    store %22, %0
    %23 = load %0 : s32i
    return %23
}
