tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20010904_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20010904-2.c" (c, x86_64-unknown-linux-gnu)
global y : rec_y[2] = zero [external, default, align 32, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = const 1 : s64i
        %6 = get_global @y : rec_y[2]*
        %7 = get_element %6[%5] : rec_y*
        %8 = cast(bitcast) %7 : s8i*
        %9 = const 0 : s64i
        %10 = get_global @y : rec_y[2]*
        %11 = get_element %10[%9] : rec_y*
        %12 = cast(bitcast) %11 : s8i*
        %13 = ptr_diff %8, %12 : s64i
        %14 = const 31 : s64i
        %15 = and %13, %14 : s64i
        %16 = cast(int_to_bool) %15 : bool
        if %16 {
            %17 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
